RESOLVED FIXED96829
Fix LoadImagesAutomatically cache behavior
https://bugs.webkit.org/show_bug.cgi?id=96829
Summary Fix LoadImagesAutomatically cache behavior
Bo Liu
Reported 2012-09-14 15:15:59 PDT
Fix LoadImagesAutomatically cache behavior
Attachments
Patch (3.44 KB, patch)
2012-09-14 15:18 PDT, Bo Liu
no flags
Add layout test that fails without this patch. Rename method to clientAllowsImage (7.39 KB, patch)
2012-09-14 19:19 PDT, Bo Liu
no flags
Skip new test in webkit2 since overridePreference is not supported. (8.04 KB, patch)
2012-09-14 19:29 PDT, Bo Liu
no flags
Bo Liu
Comment 1 2012-09-14 15:18:53 PDT
Adam Barth
Comment 2 2012-09-14 15:23:22 PDT
Comment on attachment 164235 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=164235&action=review Can we add a test for this so we don't break it in the future? > Source/WebCore/loader/cache/CachedResourceLoader.cpp:535 > - if (existingResource->type() == CachedResource::ImageResource && shouldDeferImageLoad(existingResource->url())) > + if (existingResource->type() == CachedResource::ImageResource && !clientAllowImage(existingResource->url())) clientAllowImage -> clientAllowsImage ?
Bo Liu
Comment 3 2012-09-14 19:19:43 PDT
Created attachment 164264 [details] Add layout test that fails without this patch. Rename method to clientAllowsImage
Bo Liu
Comment 4 2012-09-14 19:29:53 PDT
Created attachment 164265 [details] Skip new test in webkit2 since overridePreference is not supported.
Adam Barth
Comment 5 2012-09-17 11:01:50 PDT
Comment on attachment 164265 [details] Skip new test in webkit2 since overridePreference is not supported. Thanks.
WebKit Review Bot
Comment 6 2012-09-17 11:19:35 PDT
Comment on attachment 164265 [details] Skip new test in webkit2 since overridePreference is not supported. Clearing flags on attachment: 164265 Committed r128780: <http://trac.webkit.org/changeset/128780>
WebKit Review Bot
Comment 7 2012-09-17 11:19:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.