Fix LoadImagesAutomatically cache behavior https://bugs.webkit.org/show_bug.cgi?id=96829

Patch by Bo Liu <boliu@chromium.org> on 2012-09-17
Reviewed by Adam Barth.

I broke the caching behavior of LoadImagesAutomatically in
http://trac.webkit.org/changeset/128645

This restores the original behavior that AutoLoadImage does not block
loads from memory cache.

Source/WebCore:

Test: fast/loader/display-image-unset-allows-cached-image-load.html

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::determineRevalidationPolicy):
(WebCore::CachedResourceLoader::clientAllowsImage):
(WebCore::CachedResourceLoader::shouldDeferImageLoad):
* loader/cache/CachedResourceLoader.h:
(CachedResourceLoader):

LayoutTests:

* fast/loader/display-image-unset-allows-cached-image-load-expected.txt: Added.
* fast/loader/display-image-unset-allows-cached-image-load.html: Added.
* fast/loader/resources/image1.html: Added.
* fast/loader/resources/image2.html: Added.
* platform/wk2/Skipped:

Canonical link: https://commits.webkit.org/114852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128780 268f45cc-cd09-0410-ab3c-d52691b4dbfc